<resources>
    <string name="app_name">Project</string>
    <string name="title_home">Home</string>
    <string name="title_moment">Moment</string>
    <string name="title_post">Post</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="title_room_chat">Room</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password is too short. Please enter a minimum of 6 characters!</string>
    <string name="auth_failed">Authentication failed. Invalid email and/or password.</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password Reset Email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Click here to sign up!</string>
    <string name="btn_link_to_login">Already have an account? Click here to login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password? Click here!</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="btn_password">Password</string>

    <string name="room_name_dialog_empty_title">Empty Alert</string>
    <string name="room_name_dialog_empty_msg">Your roon name can not be empty!</string>
    <string name="room_name_dialog_long_title">Overlong Alert</string>
    <string name="room_name_dialog_long_msg">Your roon name is too long! No more than 50 characters.</string>

    <string name="btn_setting">Setting</string>
    <string name="layout_based">Setting</string>

    <string name="nullMsg">empty message</string>

    <string name="no_friends_tips">You don’t have any chat history yet, go find more friends~</string>
    <string name="send">Send</string>
    <string name="add">Add</string>
    <string name="large_text">Hello world</string>
</resources>